Bug 260926 - patch to close memory leak when DialogSelectMaster dialogs are created
Summary: patch to close memory leak when DialogSelectMaster dialogs are created
Status: RESOLVED FIXED
Alias: None
Product: kmix
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Christian Esken
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-21 23:43 UTC by Felix Berger
Modified: 2011-04-04 04:33 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.6.3
Sentry Crash Report:


Attachments
patch for memory leak (1.09 KB, patch)
2010-12-21 23:43 UTC, Felix Berger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Felix Berger 2010-12-21 23:43:42 UTC
Created attachment 55145 [details]
patch for memory leak

Version:           unspecified (using KDE 4.5.1) 
OS:                Linux

The attached patch sets the widget attribute to delete the DialogSelectMaster dialog when it is closed.

Reproducible: Didn't try
Comment 1 Lamarque V. Souza 2011-04-04 04:24:16 UTC
SVN commit 1227025 by lvsouza:

Fix memory leak when DialogSelectMaster dialogs are closed.
Thanks Felix Berger for this patch.

BUG: 260926
FIXED-IN: 4.6.2


 M  +2 -1      apps/kmix.cpp  
 M  +1 -1      gui/kmixdockwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1227025
Comment 2 Lamarque V. Souza 2011-04-04 04:27:58 UTC
SVN commit 1227026 by lvsouza:

Backporting r1227025 to 4.6. branch:
Fix memory leak when DialogSelectMaster dialogs are closed.
Thanks Felix Berger for this patch.

BUG: 260926
FIXED-IN: 4.6.2


 M  +2 -1      apps/kmix.cpp  
 M  +1 -1      gui/kmixdockwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1227026