Fix memory leak when DialogSelectMaster dialogs are closed. Thanks Felix Berger for this patch.

BUG: 260926
FIXED-IN: 4.6.2

svn path=/trunk/KDE/kdemultimedia/kmix/; revision=1227025